--- a/styles/places.css
+++ b/styles/places.css
@@ -15,20 +15,31 @@ header a {
   color: rgb(183, 230, 235);
 }
 
-header nav a:hover{
+header nav a:hover {
   background-color: rgb(183, 230, 235);
-  color: rgb(59,59,59);
+  color: rgb(59, 59, 59);
 }
-
+/*-----------Span Element------------*/
+.menu-btn span {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: rgb(183, 230, 235);
+}
+/*----------------MAIN----------------*/
 main ul {
-  width: 1500px;
-  margin: 0 auto 48px auto;
+  width: 93.75rem;
+  margin: 0 auto 3rem auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 20px 20px;
+  gap: 1.25rem 1.25rem;
 }
 
 main ul li:nth-of-type(3) {
+  grid-column: 1 / span 2;
+}
+
+main ul li:nth-of-type(8) {
   grid-column: 1 / span 2;
 }
 
@@ -41,19 +52,23 @@ main li {
 }
 
 main li img {
-  width: 300px;
-  height: 280px;
+  width: 18.75rem;
+  height: 17.5rem;
   object-fit: cover;
 }
 
 .item-content {
-  padding: 24px;
+  padding: 1.5rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.item-content h2{
+/* main li p{
+  text-align: justify;
+} */
+
+.item-content h2 {
   margin: 0;
 }
 
@@ -64,10 +79,50 @@ main li img {
 .actions a {
   color: rgb(22, 211, 228);
   text-decoration: none;
-  padding: 6px;
+  padding: 0.375rem;
 }
 
 .actions a:hover {
   background-color: rgb(235, 253, 255);
   border-radius: 5px;
+}
+
+/*----------Media-Queries------------*/
+
+@media (max-width: 64rem) {
+  /*1024px*/
+  main ul {
+    width: 40rem;
+  }
+
+  main li {
+    flex-direction: column;
+  }
+
+  .item-content {
+    height: 18rem;
+  }
+
+  main li img {
+    width: 19.5rem;
+  }
+
+  main ul li:nth-of-type(3) {
+    height: 38.5rem;
+  }
+
+  main ul li:nth-of-type(3) img {
+    width: 40rem;
+  }
+
+  main ul li:nth-of-type(8) {
+    height: 39.5rem;
+  }
+  main ul li:nth-of-type(8) img {
+    width: 40rem;
+  }
+}
+
+@media (max-width: 48.5rem) {
+  /*768px*/
 }
