--- a/styles/shared.css
+++ b/styles/shared.css
@@ -1,77 +1,161 @@
-body{
-    font-family: "Comfortaa" , sans-serif;
-    margin: 0;
+body {
+  font-family: "Comfortaa", sans-serif;
+  margin: 0;
 }
 
 ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 3.75rem;
+  position: absolute;
+  box-sizing: border-box;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+#page-logo a {
+  padding: 10px;
+  font-family: "Oleo Script", sans-serif;
+  color: rgb(245, 243, 160);
+  font-size: 3.125rem;
+  text-decoration: none;
+  text-transform: uppercase; /*Made the writing all uppercase*/
+  text-shadow: 1px 1px 2px rgb(0, 0, 0);
+}
+
+header ul {
+  display: flex;
+}
+
+header li {
+  margin-left: 1.25rem;
+}
+
+header a {
+  color: rgb(255, 251, 0);
+  text-decoration: none;
+  font-size: 1.25rem;
+  padding: 0.75rem;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+}
+
+header nav a:hover {
+  color: rgb(77, 77, 77);
+  background-color: rgb(255, 251, 0);
+}
+
+.menu-btn {
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  display: none;
+}
+
+.menu-btn span {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: rgb(255, 251, 0);
+}
+
+/*----------------Side-Drawer-----------------*/
+#side-drawer {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(29, 26, 27);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+#side-drawer:target {
+  display: block;
+}
+
+#side-drawer header {
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 0 5%;
+}
+
+#side-drawer ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 4rem;
+  flex-direction: column;
+  /* justify-content: center; */ /*Boylam için*/
+  align-items: center; /*Enlem için*/
+}
+
+#side-drawer a {
+  color: rgb(253, 239, 213);
+}
+
+#side-drawer li {
+  margin: 1rem;
+}
+
+/*-----------------FOOTER---------------*/
+footer {
+  background: linear-gradient(70deg, rgb(24, 24, 24), rgb(25, 29, 29));
+  padding: 2.25rem 0;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+  /* padding: 40px; */
+}
+
+footer li {
+  width: 5rem;
+  height: 5rem;
+  margin: 0px 3.125rem;
+}
+
+footer img {
+  width: 100%;
+  height: 100%;
+}
+/*------------OTHERS-----------------*/
+p a {
+  text-decoration: none;
+  color: rgb(42, 7, 146);
+  font-weight: bold;
+}
+
+p a:hover {
+  text-decoration: underline;
+}
+/*----------Media-Queries------------*/
+
+@media (max-width: 48.5rem) {
+  /*768px*/
   header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 60px;
-    position: absolute;
-    box-sizing: border-box;
-    width: 100%;
-    top: 0;
-    left: 0;
+    padding: 1rem 2rem;
+    flex-wrap: nowrap;
   }
-  
-  #page-logo a {
-    padding: 10px;
-    font-family: "Oleo Script", sans-serif;
-    color: rgb(245, 243, 160);
-    font-size: 50px;
-    text-decoration: none;
-    text-transform: uppercase; /*Made the writing all uppercase*/
-    text-shadow: 1px 1px 2px rgb(0, 0, 0);
+
+  header nav {
+    display: none;
   }
-  
-  header ul {
+
+  .menu-btn {
     display: flex;
   }
-  
-  header li {
-    margin-left: 20px;
-  }
-  
-  header a {
-    color: rgb(255, 251, 0);
-    text-decoration: none;
-    font-size: 20px;
-    padding: 12px;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-    border-radius: 6px;
-  }
-  
-  header nav a:hover {
-    color: rgb(77, 77, 77);
-    background-color: rgb(255, 251, 0);
-  }
-  
-  footer {
-    background: linear-gradient(70deg, rgb(24, 24, 24), rgb(25, 29, 29));
-    padding: 36px 0;
-  }
-  
-  footer ul {
-    display: flex;
-    justify-content: center;
-    /* padding: 40px; */
-  }
-  
-  footer li {
-    width: 80px;
-    height: 80px;
-    margin: 0px 50px;
-  }
-  
-  footer img {
-    width: 100%;
-    height: 100%;
-  }
-  
+}
