--- a/styles/places.css
+++ b/styles/places.css
@@ -91,6 +91,7 @@ main li img {
 
 @media (max-width: 64rem) {
   /*1024px*/
+
   main ul {
     width: 40rem;
   }
@@ -104,7 +105,7 @@ main li img {
   }
 
   main li img {
-    width: 19.5rem;
+    width: 100%;
   }
 
   main ul li:nth-of-type(3) {
@@ -123,6 +124,38 @@ main li img {
   }
 }
 
-@media (max-width: 48.5rem) {
+@media (max-width: 42rem) {
   /*768px*/
+
+  main ul {
+    width: 90%;
+  }
+
+  .item-content {
+    height: auto;
+  }
+
+  main ul li {
+    grid-column: 1 / span 2;
+  }
+
+  main ul li:nth-of-type(3) {
+    height: auto;
+  }
+
+  main ul li:nth-of-type(8) {
+    height: auto;
+  }
+
+  main ul li:nth-of-type(3) img {
+    width: 100%;
+  }
+
+  main ul li:nth-of-type(8) img {
+    width: 100%;
+  }
+
+  .second-paragraph {
+    display: none;
+  }
 }
