--- a/Web/www/styles/forms/login.css
+++ b/Web/www/styles/forms/login.css
@@ -1,3 +1,8 @@
+
+.form-buttons{
+  justify-content: center;
+}
+
 .login-result-message {
   width: 30rem;
   margin: 2rem auto;
@@ -15,6 +20,10 @@
 .login-failed {
   color: #ff0f0f;
   background-color: #ff8383;
+}
+
+#registerParagraph{
+  text-align: center;
 }
 
 @media (max-width: 48.5rem) {
