--- a/Web/www/styles/forms/login.css
+++ b/Web/www/styles/forms/login.css
@@ -1,5 +1,4 @@
-
-.form-buttons{
+.form-buttons {
   justify-content: center;
 }
 
@@ -22,12 +21,16 @@
   background-color: #ff8383;
 }
 
-#registerParagraph{
+#registerParagraph {
   text-align: center;
 }
 
 @media (max-width: 48.5rem) {
   /*768px*/
+
+  #registration-form {
+    width: 25rem;
+  }
 
   .login-result-message {
     width: 27.5rem;
@@ -36,9 +39,15 @@
 
 @media (max-width: 30rem) {
   /*480px*/
+
   main h1 {
     margin-top: 2rem;
   }
+
+  #registration-form {
+    width: 80%;
+  }
+
   .login-result-message {
     width: 80%;
   }
