--- a/Web/www/styles/cities/bilbao.css
+++ b/Web/www/styles/cities/bilbao.css
@@ -3,8 +3,12 @@ body {
   color: rgb(255, 255, 255);
 }
 
+#page-logo a{
+  color: rgb(167, 232, 239);
+}
+
 #hero {
-  background-image: url("/img/places/izmir/izmir-saat-kulesi3.jpg");
+  background-image: url("/img/places/bilbao/bilbao-city-view-architecture.jpg");
 }
 
 /*-------------------INTRODUCTION---------------------*/
@@ -181,5 +185,3 @@ body {
     min-width: 18rem;
   }
 }
-
-
