--- a/Web/www/styles/cities/cities-shared.css
+++ b/Web/www/styles/cities/cities-shared.css
@@ -20,6 +20,7 @@ header nav a:hover {
   background-color: rgb(183, 230, 235);
 }
 
+/*-------------------INTRODUCTION---------------------*/
 #hero {
   height: 50rem;
   background-image: url("/img/places/izmir/izmir-saat-kulesi3.jpg");
@@ -64,6 +65,192 @@ h2 {
 
 p {
   font-size: 1.5rem;
+}
+
+/*-------------------The Fullscreen Image Modal--------------------*/
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+/* Caption of Modal Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation */
+.modal-content,
+#caption {
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+  from {
+    -webkit-transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes zoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px) {
+  .modal-content {
+    width: 100%;
+  }
+}
+
+/*----------IMG-&-FIGURE-----------*/
+.image {
+  display: inline-block;
+  margin-top: 30px;
+  transition: all 0.8s;
+}
+
+.image img {
+  object-fit: cover;
+}
+
+.image:hover {
+  transform: scale(1.1);
+}
+
+.image:hover figcaption {
+  opacity: 1;
+  transition: opacity 0.8s;
+}
+
+figure {
+  font-family: "Ubuntu";
+  font-size: 20px;
+  color: #282828;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+main li img {
+  border: 1px solid grey;
+  width: 18.5rem;
+  height: 28rem;
+  box-shadow: 0px 0px 20px 0px black;
+}
+
+figcaption {
+  opacity: 0;
+  text-align: center;
+}
+
+.city-cheat-card h2 {
+  text-align: center;
+  margin-top: 6rem;
+}
+
+/*--------------------TABLE------------------*/
+
+.styled-table {
+  color: black;
+}
+
+.styled-table {
+  border-collapse: collapse;
+  margin: 0 auto 1.5rem auto;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 25rem;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  font-family: inherit;
+}
+
+.styled-table thead tr {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+  padding: 0.75rem 0.9375rem;
+}
+
+.styled-table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(odd) {
+  background-color: #d7d7d7;
+}
+.styled-table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:nth-of-type(1) {
+  background-color: #009879;
+  color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+  border-bottom: 3px solid #009879;
+}
+
+.styled-table tbody tr.active-row {
+  font-weight: bold;
+  color: #009879;
 }
 
 /*------- Styles for the noscript warning------- */
