changed the nav items color

--- a/Web/www/styles/cities/bilbao.css
+++ b/Web/www/styles/cities/bilbao.css
@@ -26,6 +26,10 @@ header a {
   color: var(--page-logo-color);
 }
 
+.menu-btn span{
+  background-color: var(--page-logo-color);
+}
+
 #hero {
   background-image: url("/img/places/bilbao/bilbao-city-view-architecture.jpg");
 }
