--- a/Web/www/styles/cities/cities-shared.css
+++ b/Web/www/styles/cities/cities-shared.css
@@ -1,6 +1,5 @@
 body {
   background: linear-gradient(30deg, rgb(77, 77, 77), rgb(58, 58, 58));
-  /* color: rgb(68, 68, 68); */
 }
 
 #page-logo a {
@@ -25,7 +24,7 @@ header nav a:hover {
   height: 50rem;
   background-image: url("/img/places/izmir/izmir-saat-kulesi3.jpg");
   background-position: center;
-  background-size: cover; /*img will cover the entire element*/
+  background-size: cover;
 }
 
 #hero-content {
@@ -78,23 +77,19 @@ li p a:hover {
 }
 
 /*-------------------The Fullscreen Image Modal--------------------*/
-
-/* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
-/* Modal Content (image) */
 .modal-content {
   margin: auto;
   display: block;
@@ -102,7 +97,6 @@ li p a:hover {
   max-width: 700px;
 }
 
-/* Caption of Modal Image */
 #caption {
   margin: auto;
   display: block;
@@ -212,12 +206,8 @@ figcaption {
 }
 
 /*--------------------TABLE------------------*/
-
 .styled-table {
   color: black;
-}
-
-.styled-table {
   border-collapse: collapse;
   margin: 0 auto 1.5rem auto;
   font-size: 0.9em;
@@ -245,6 +235,7 @@ figcaption {
 .styled-table tbody tr:nth-of-type(odd) {
   background-color: #d7d7d7;
 }
+
 .styled-table tbody tr:nth-of-type(even) {
   background-color: #f3f3f3;
 }
