--- a/Web/www/styles/places.css
+++ b/Web/www/styles/places.css
@@ -28,7 +28,7 @@ header nav a:hover {
 }
 /*----------------MAIN----------------*/
 main ul {
-  width: 93.75rem;
+  width: 98%;
   margin: 0 auto 3rem auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -89,11 +89,16 @@ main li img {
 
 /*----------Media-Queries------------*/
 
-@media (max-width: 64rem) {
-  /*1024px*/
+@media (max-width: 84rem) {
+  main li img {
+    height: 100%;
+    min-width: 17.5rem;
+  }
+}
 
+@media (max-width: 68.75rem) {
   main ul {
-    width: 40rem;
+    width: 90%;
   }
 
   main li {
@@ -101,34 +106,65 @@ main li img {
   }
 
   .item-content {
-    height: 18rem;
+    height: 14rem;
   }
 
   main li img {
+    height: 50%;
     width: 100%;
   }
 
   main ul li:nth-of-type(3) {
-    height: 38.5rem;
+    height: 37rem;
+  }
+
+  main ul li:nth-of-type(3) img {
+    width: 100%;
+  }
+
+  main ul li:nth-of-type(8) {
+    height: 37rem;
+  }
+  main ul li:nth-of-type(8) img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 64rem) {
+  /*1024px*/
+
+  main ul {
+    width: 40rem;
+  }
+
+  .item-content {
+    height: 19rem;
+  }
+
+  main ul li:nth-of-type(3) {
+    height: 40.5rem;
   }
 
   main ul li:nth-of-type(3) img {
     width: 40rem;
+    height: 20rem;
   }
 
   main ul li:nth-of-type(8) {
-    height: 39.5rem;
+    height: 42.5rem;
   }
   main ul li:nth-of-type(8) img {
     width: 40rem;
+    height: 20rem;
   }
 }
 
-@media (max-width: 42rem) {
+@media (max-width: 40.3rem) {
   /*768px*/
 
   main ul {
     width: 90%;
+    max-width: 28rem;
   }
 
   .item-content {
