--- a/Web/www/styles/shared.css
+++ b/Web/www/styles/shared.css
@@ -45,11 +45,13 @@ header a {
   padding: 0.75rem;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
+  transition: all 0.3s ease;
 }
 
 header nav a:hover {
   color: rgb(77, 77, 77);
   background-color: rgb(255, 251, 0);
+  padding: 0.5rem 1rem;
 }
 
 .menu-btn {
