--- a/Web/www/styles/cities/madrid.css
+++ b/Web/www/styles/cities/madrid.css
@@ -29,10 +29,10 @@ header {
 #hero video {
   position: absolute;
   top: 50%;
-  left: 50%;
-  min-width: 100%;
+  left: 62%;
+  min-width: 126%;
   min-height: 100%;
-  width: auto;
+  width: 100%;
   height: auto;
   transform: translate(-50%, -50%);
   z-index: 0;
