--- a/Web/www/styles/shared.css
+++ b/Web/www/styles/shared.css
@@ -30,6 +30,11 @@ header {
   text-shadow: 1px 1px 2px rgb(0, 0, 0);
 }
 
+#page-logo a:hover,
+#page-logo a:focus{
+  color: rgb(245, 241, 33);
+}
+
 header ul {
   display: flex;
 }
@@ -46,9 +51,11 @@ header a {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   transition: all 0.3s ease;
+  font-weight: bolder;
 }
 
-header nav a:hover {
+header nav a:hover,
+header nav a:focus {
   color: rgb(77, 77, 77);
   background-color: rgb(255, 251, 0);
   padding: 0.5rem 1rem;
