--- a/Web/www/styles/styles.css
+++ b/Web/www/styles/styles.css
@@ -52,7 +52,8 @@ body {
   box-shadow: 2px 4px 8px rgb(68, 67, 67);
 }
 
-#hero-content a:hover {
+#hero-content a:hover,
+#hero-content a:focus {
   background-color: rgb(255, 238, 0);
 }
 
@@ -82,6 +83,13 @@ body {
   text-transform: uppercase;
 }
 
+.destination a:hover,
+.destination a:focus {
+  font-size: xx-large;
+  transform: scale(1.1); /* Slightly scale up the link */
+  transition: all 0.3s ease; /* Smooth transition for the effect */
+}
+
 .destination p {
   text-align: center;
   font-size: 1.5rem;
@@ -101,7 +109,7 @@ body {
   color: rgb(0, 160, 117);
 }
 
-.destination a{
+.destination a {
   text-decoration: none;
 }
 
@@ -112,7 +120,6 @@ body {
     width: 96%;
   }
 }
-
 
 @media (max-width: 48.5rem) {
   /*768px*/
