--- a/Web/www/styles/cities/big-cities-shared.css
+++ b/Web/www/styles/cities/big-cities-shared.css
@@ -1,4 +1,4 @@
-/* General Styles */
+/* ====== Header ====== */
 
 nav ul {
   list-style: none;
@@ -17,14 +17,18 @@ header nav a:hover {
   border-radius: 4px;
 }
 
-/* Hero Section */
+/* ====== Hero Section ======== */
 #hero {
-  position: relative;
+  
   height: 100vh;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.position-relative{
+  position: relative;
 }
 
 #hero-content {
@@ -59,4 +63,28 @@ header nav a:hover {
   to {
     opacity: 1;
   }
+}
+
+/* ======= Main =============*/
+
+h2 {
+  font-size: 2.5rem;
+}
+
+p {
+  font-size: 1.5rem;
+}
+
+li p a {
+  text-decoration: none;
+  color: rgb(91, 3, 91);
+}
+
+.display-none{
+  display: none;
+  position: unset;
+}
+
+.position-static{
+  position: static;
 }
