--- a/Web/www/styles/forms/chatbox.css
+++ b/Web/www/styles/forms/chatbox.css
@@ -18,8 +18,8 @@ p {
   border: 2px solid #dedede;
   background-color: #f1f1f1;
   border-radius: 5px;
-  padding: 10px;
-  margin: 10px 0;
+  padding: 0.625rem;
+  margin: 0.625rem 0;
 }
 
 .darker {
@@ -39,6 +39,12 @@ form {
   margin: auto 1%;
   background-color: rgb(255, 255, 255);
   padding: 1rem 0;
+}
+
+fieldset {
+  padding: 0;
+  margin: 0;
+  border: none;
 }
 
 textarea {
