--- a/Web/www/styles/cities/madrid.css
+++ b/Web/www/styles/cities/madrid.css
@@ -106,10 +106,10 @@ header a {
 .close {
   /*Use JS to add the class*/
   position: fixed;
-  top: 15px;
-  right: 35px;
+  top: 0.9375rem;
+  right: 2.1875rem;
   color: #f1f1f1;
-  font-size: 40px;
+  font-size: 2.5rem;
   font-weight: bold;
   cursor: pointer;
   z-index: 1000;
@@ -334,7 +334,7 @@ header a {
 }
 
 .card__like {
-  width: 18px;
+  width: 1.125rem;
 }
 
 .card__clock {
@@ -359,14 +359,14 @@ header a {
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 235px;
+  height: 14.6875rem;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
 }
 
 .card__info-hover {
   position: absolute;
-  padding: 16px;
+  padding: 1rem;
   width: 100%;
   opacity: 0;
   top: 0;
@@ -379,7 +379,7 @@ header a {
   background-repeat: no-repeat;
   width: 100%;
   position: absolute;
-  height: 235px;
+  height: 14.6875rem;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
   top: 0;
@@ -390,7 +390,7 @@ header a {
   background-color: #fff;
   width: 33.3%;
   position: relative;
-  border-radius: 12px;
+  border-radius: 1.5625rem;
   overflow: hidden;
   box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
 }
@@ -410,20 +410,20 @@ header a {
 .card__category {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
-  font-size: 13px;
-  letter-spacing: 2px;
+  font-size: 0.8125rem;
+  letter-spacing: 0.125rem;
   font-weight: 500;
   color: #868686;
 }
 
 .card__title {
-  margin-top: 5px;
-  margin-bottom: 10px;
+  margin-top: 0.3125rem;
+  margin-bottom: 0.625rem;
   font-family: "Roboto Slab", serif;
 }
 
 .card__by {
-  font-size: 12px;
+  font-size: 0.75rem;
   font-family: "Raleway", sans-serif;
   font-weight: 500;
 }
