--- a/Web/www/styles/forms/forms-shared.css
+++ b/Web/www/styles/forms/forms-shared.css
@@ -14,7 +14,8 @@ h1 {
 }
 
 form {
-  width: 30rem;
+  width: 90%;
+  max-width: 30rem;
   margin: 2rem auto;
   background-color: rgb(255, 255, 255);
   padding: 1rem;
@@ -22,8 +23,8 @@ form {
 }
 
 label {
-  margin-top: 0.8rem;
-  margin-bottom: 0.5rem;
+  margin-top: 1rem;
+  margin-bottom: 0.75rem;
   display: block;
 }
 
@@ -69,6 +70,7 @@ button {
 button:hover {
   background-color: rgb(76, 25, 113);
   border-color: rgb(76, 25, 113);
+  transition: all 0.3s ease-in-out;
 }
 
 @media (max-width: 48.5rem) {
