--- a/Web/www/styles/places.css
+++ b/Web/www/styles/places.css
@@ -1,10 +1,16 @@
+:root {
+  --primary-color: rgb(183, 230, 235);
+  --secondary-color: rgb(22, 211, 228);
+  --dark-text: rgb(68, 68, 68);
+}
+
 body {
   background: linear-gradient(30deg, rgb(77, 77, 77), rgb(58, 58, 58));
-  color: rgb(68, 68, 68);
+  color: var(--dark-text);
 }
 
 #page-logo a {
-  color: rgb(183, 230, 235);
+  color: var(--primary-color);
 }
 
 #page-logo a:hover,
@@ -13,7 +19,7 @@ body {
 }
 
 header a {
-  color: rgb(183, 230, 235);
+  color: var(--primary-color);
   background-color: transparent;
 }
 
@@ -22,7 +28,7 @@ header {
 }
 
 header a {
-  color: rgb(183, 230, 235);
+  color: var(--primary-color);
 }
 
 header nav a:hover,
@@ -35,7 +41,7 @@ header nav a:focus {
   display: block;
   width: 100%;
   height: 3px;
-  background-color: rgb(183, 230, 235);
+  background-color: var(--primary-color);
 }
 /*----------------MAIN----------------*/
 main ul {
@@ -88,18 +94,22 @@ main li img {
 }
 
 .actions a {
-  color: rgb(22, 211, 228);
+  color: var(--secondary-color);
   text-decoration: none;
   padding: 0.375rem;
+  transition: all 0.3s ease-in-out;
 }
 
-.actions a:hover,.actions a:focus {
+.actions a:hover,
+.actions a:focus {
   background-color: rgb(235, 253, 255);
   border-radius: 5px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 /*----------Media-Queries------------*/
 
+/****** Laptops and Large Screens ******/
 @media (max-width: 84rem) {
   main li img {
     height: 100%;
@@ -107,6 +117,7 @@ main li img {
   }
 }
 
+/****** Tablets ******/
 @media (max-width: 68.75rem) {
   main ul {
     width: 90%;
@@ -141,6 +152,7 @@ main li img {
   }
 }
 
+/****** Small Tablets and Large Phones ******/
 @media (max-width: 64rem) {
   /*1024px*/
 
@@ -170,6 +182,7 @@ main li img {
   }
 }
 
+/****** Mobile Phones ******/
 @media (max-width: 40.3rem) {
   /*768px*/
 
