little modifications(modification de balise/style)

--- a/Web/www/styles/cities/big-cities-shared.css
+++ b/Web/www/styles/cities/big-cities-shared.css
@@ -1,7 +1,3 @@
-:root {
-  --primary-color: rgb(183, 230, 235);
-}
-
 /* ====== Header ====== */
 
 nav ul {
@@ -11,11 +7,11 @@ nav ul {
 }
 
 header nav a {
-  color: var(--primary-color);
+  color: rgb(183, 230, 235);
 }
 
 header nav a:hover {
-  background-color: var(--primary-color);
+  background-color: rgb(183, 230, 235);
   color: rgb(59, 59, 59);
   padding: 0.5rem 1rem;
   border-radius: 4px;
@@ -80,16 +76,12 @@ p {
 
 li p a {
   text-decoration: none;
-  color: rgb(120, 10, 120);
+  color: rgb(91, 3, 91);
 }
 
-.ancre {
+.internal-link {
   text-decoration: none;
-  color: rgb(91, 12, 91);
-}
-
-.ancre:hover {
-  text-decoration: underline;
+  color: rgb(91, 3, 91);
 }
 
 .display-none {
