--- a/Web/www/styles/places.css
+++ b/Web/www/styles/places.css
@@ -1,16 +1,10 @@
-:root {
-  --primary-color: rgb(183, 230, 235);
-  --secondary-color: rgb(22, 211, 228);
-  --dark-text: rgb(68, 68, 68);
-}
-
 body {
   background: linear-gradient(30deg, rgb(77, 77, 77), rgb(58, 58, 58));
-  color: var(--dark-text);
+  color: rgb(68, 68, 68);
 }
 
 #page-logo a {
-  color: var(--primary-color);
+  color: rgb(183, 230, 235);
 }
 
 #page-logo a:hover,
@@ -19,7 +13,7 @@ body {
 }
 
 header a {
-  color: var(--primary-color);
+  color: rgb(183, 230, 235);
   background-color: transparent;
 }
 
@@ -28,7 +22,7 @@ header {
 }
 
 header a {
-  color: var(--primary-color);
+  color: rgb(183, 230, 235);
 }
 
 header nav a:hover,
@@ -41,7 +35,7 @@ header nav a:focus {
   display: block;
   width: 100%;
   height: 3px;
-  background-color: var(--primary-color);
+  background-color: rgb(183, 230, 235);
 }
 /*----------------MAIN----------------*/
 main ul {
@@ -94,22 +88,18 @@ main li img {
 }
 
 .actions a {
-  color: var(--secondary-color);
+  color: rgb(22, 211, 228);
   text-decoration: none;
   padding: 0.375rem;
-  transition: all 0.3s ease-in-out;
 }
 
-.actions a:hover,
-.actions a:focus {
+.actions a:hover,.actions a:focus {
   background-color: rgb(235, 253, 255);
   border-radius: 5px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 /*----------Media-Queries------------*/
 
-/****** Laptops and Large Screens ******/
 @media (max-width: 84rem) {
   main li img {
     height: 100%;
@@ -117,7 +107,6 @@ main li img {
   }
 }
 
-/****** Tablets ******/
 @media (max-width: 68.75rem) {
   main ul {
     width: 90%;
@@ -152,7 +141,6 @@ main li img {
   }
 }
 
-/****** Small Tablets and Large Phones ******/
 @media (max-width: 64rem) {
   /*1024px*/
 
@@ -182,7 +170,6 @@ main li img {
   }
 }
 
-/****** Mobile Phones ******/
 @media (max-width: 40.3rem) {
   /*768px*/
 
