--- a/Web/www/styles/shared.css
+++ b/Web/www/styles/shared.css
@@ -1,11 +1,3 @@
-:root {
-  --primary-color: rgb(255, 251, 0);
-  --dark-text: rgb(77, 77, 77);
-  --light-text: rgb(253, 239, 213);
-  --background-dark: rgb(24, 24, 24);
-  --background-drawer: rgb(29, 26, 27);
-}
-
 body {
   font-family: "Comfortaa", sans-serif;
 }
@@ -53,7 +45,7 @@ header li {
 }
 
 header a {
-  color: var(--primary-color);
+  color: rgb(255, 251, 0);
   text-decoration: none;
   font-size: 1.25rem;
   padding: 0.75rem;
@@ -66,8 +58,8 @@ header a {
 
 header nav a:hover,
 header nav a:focus {
-  color: var(--dark-text);
-  color: var(--primary-color);
+  color: rgb(77, 77, 77);
+  background-color: rgb(255, 251, 0);
   padding: 0.5rem 1rem;
 }
 
@@ -83,7 +75,7 @@ header nav a:focus {
 .menu-btn span {
   display: block;
   width: 100%;
-  height: 3px;
+  height: 0.1875rem;
   background-color: rgb(255, 251, 0);
 }
 
@@ -91,7 +83,7 @@ header nav a:focus {
 #side-drawer {
   width: 100%;
   height: 100%;
-  background-color: var(--background-drawer);
+  background-color: rgb(29, 26, 27);
   position: fixed;
   top: 0;
   left: 0;
@@ -143,7 +135,7 @@ footer ul {
 footer li {
   width: 5rem;
   height: 5rem;
-  margin: 0px 3.125rem;
+  margin: 0 3.125rem;
 }
 
 footer img {
