--- a/Web/www/styles/cities/big-cities-shared.css
+++ b/Web/www/styles/cities/big-cities-shared.css
@@ -83,12 +83,12 @@ li p a {
   color: rgb(120, 10, 120);
 }
 
-.ancre {
+.internal-link {
   text-decoration: none;
-  color: rgb(91, 12, 91);
+  color: rgb(120, 10, 120);
 }
 
-.ancre:hover {
+.internal-link:hover {
   text-decoration: underline;
 }
 
