--- a/Web/www/styles/shared.css
+++ b/Web/www/styles/shared.css
@@ -83,7 +83,7 @@ header nav a:focus {
 .menu-btn span {
   display: block;
   width: 100%;
-  height: 3px;
+  height: 0.1875rem;
   background-color: rgb(255, 251, 0);
 }
 
@@ -143,7 +143,7 @@ footer ul {
 footer li {
   width: 5rem;
   height: 5rem;
-  margin: 0px 3.125rem;
+  margin: 0 3.125rem;
 }
 
 footer img {
