--- a/Web/www/styles/cities/cities-shared.css
+++ b/Web/www/styles/cities/cities-shared.css
@@ -2,6 +2,10 @@ body {
   background: linear-gradient(30deg, rgb(77, 77, 77), rgb(58, 58, 58));
 }
 
+p{
+  text-align: justify;
+}
+
 #page-logo a {
   color: rgb(183, 230, 235);
 }
